# test-protected-deployment5

./: .gitattributes  .gitignore  README.md  app.py  cdk.json  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/: CODEOWNERS
.github/workflows/: deploy-development-or-staging.yml  deploy-feature.yml  deploy-production.yml  lint.yml  secure-policy-update.yml  teardown-feature.yml  test.yml
handlers/: do_something.py
infrastructure/constructs/: __init__.py  secrets_manager.py  sqs.py
infrastructure/iam_resources/: cdk-bootstrap-boundary-policy.json  cdk-deployment-policy.json
infrastructure/stacks/: __init__.py  main.py  shared.py
integration/: exceptions.py
integration/config/: __init__.py  logging_config.py  project_settings.py  sentry_config.py  utils.py  xray_config.py
integration/models/: __init__.py  base.py  time_range.py
integration/utils/: __init__.py  _httpx.py  aws.py
scripts/: create-repos-and-branches.sh  create_github_oidc_role.py  create_repos_and_branches.py  deploy.sh  test.sh
scripts/deployment/: post_deploy.py
tests/: conftest.py
